--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,13 @@ dist/
 dist
 
 # Environment files (comprehensive coverage)
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+*.env
+*.env.*
 
 *token.json*
 *credentials.json*
